updating settin-up-jenkins

--- a/site/setting-up-VM/index.html
+++ b/site/setting-up-VM/index.html
@@ -318,12 +318,14 @@
 </li>
 <li>
 <p>There are 2 types of hypervisors: </p>
-</li>
+<ol>
 <li>
 <p>Type 1: It is installed directly on top of physical server. </p>
 </li>
 <li>
 <p>Type 2: Here there is a layer of Host operating system (OS) between the hardware and Hypervisor (as we are using here). </p>
+</li>
+</ol>
 </li>
 </ul>
 <p>A VM is an OS or application environment that is installed on software, which imitates dedicated physical server. A VM provides an isolated environment for running its own OS and applications independently from the underlying host system or from other VMs on that host. The VM's OS is commonly referred to as the guest OS, and it can be the same as or different from the host OS or the other VMs. </p>
@@ -335,14 +337,14 @@
 </ol>
 <p>In virtual Box Click <strong>NEW</strong> icon to create a new machine</p>
 <h2 id="name-and-operating-system">Name and operating system</h2>
-<p><img alt="image" src="/pictures/os.png" /></p>
+<p><img alt="image" src="/home/apoorva/my-project/pictures/os.png" /></p>
 <ul>
 <li>Name : <code>Jenkins-deploy</code></li>
 <li>Type : <code>Linux</code></li>
 <li>Version : <code>Ubuntu (64-bit)</code></li>
 </ul>
 <h2 id="memory-size">Memory size</h2>
-<p><a href="/pictures/2.png">image</a> </p>
+<p><img alt="image" src="/pictures/2.png" /> </p>
 <p>Select <code>2000 MB</code> and click on <strong>create</strong> </p>
 <h2 id="hard-disk">Hard disk</h2>
 <p><img alt="image" src="/pictures/3.png" /> </p>
