updating settin-up-jenkins

--- a/site/setting-up-VM/index.html
+++ b/site/setting-up-VM/index.html
@@ -337,7 +337,7 @@
 </ol>
 <p>In virtual Box Click <strong>NEW</strong> icon to create a new machine</p>
 <h2 id="name-and-operating-system">Name and operating system</h2>
-<p><img alt="image" src="/home/apoorva/my-project/pictures/os.png" /></p>
+<p><img alt="image" src="/pictures/os.png" /></p>
 <ul>
 <li>Name : <code>Jenkins-deploy</code></li>
 <li>Type : <code>Linux</code></li>
