updating settin-up-jenkins

--- a/site/setting-up-jenkins/index.html
+++ b/site/setting-up-jenkins/index.html
@@ -339,7 +339,7 @@
 <p>/etc/apt/sources.list.d/jenkins.list </p>
 <pre><code>sudo apt update
 </code></pre>
-<p><img alt="image" src="/pictures/last.png" /> </p>
+<p><img alt="image" src="/last.png" /> </p>
 <p>Now install Jenkins and it’s dependencies: </p>
 <pre><code>sudo apt install jenkins
 </code></pre>
