updating settin-up-jenkins

--- a/site/setting-up-jenkins/index.html
+++ b/site/setting-up-jenkins/index.html
@@ -331,7 +331,7 @@
 <p>Add the repository key to the terminal:  </p>
 <pre><code>wget -q -O - https://pkg.jenkins.io/debian-stable/jenkins.io.key | sudo apt-key add -
 </code></pre>
-<p><img alt="pictures" src="/pictures/jenk.png" /> </p>
+<p><img alt="image" src="/home/apoorva/my-project/pictures/jenk.png" /> </p>
 <p>The system will return <strong>OK</strong>  </p>
 <p>Next, add the Debian package repository address:   </p>
 <pre><code>sudo sh -c 'echo deb https://pkg.jenkins.io/debian-stable binary/ &gt; \
