--- a/site/setting-up-dvna/index.html
+++ b/site/setting-up-dvna/index.html
@@ -433,13 +433,11 @@
 - Docker, NodeJS and NPM</p>
 <h2 id="install-docker-nodejs-and-npm">Install Docker, NodeJS and NPM</h2>
 <ul>
-<li>
-<p>For Docker installation I referred the <a href="https://docs.docker.com/engine/install/">official documentation</a>, update the <code>apt</code> package index:</p>
+<li>For Docker installation I referred the <a href="https://docs.docker.com/engine/install/">official documentation</a>, update the <code>apt</code> package index:</li>
+</ul>
 <p>sudo apt-get update</p>
-</li>
-<li>
-<p>Add Docker’s official GPG key:</p>
-</li>
+<ul>
+<li>Add Docker’s official GPG key:</li>
 </ul>
 <p>curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg</p>
 <ul>
