--- a/site/setting-up-jenkins/index.html
+++ b/site/setting-up-jenkins/index.html
@@ -437,10 +437,10 @@
 <p><img alt="image" src="/home/apoorva/my-project/pictures/jenk.png" /> </p>
 <p>The system will return <strong>OK</strong>  </p>
 <p>Next, add the Debian package repository address:   </p>
-<pre><code>sudo sh -c 'echo deb https://pkg.jenkins.io/debian-stable binary/ &gt; \
-</code></pre>
-<p>/etc/apt/sources.list.d/jenkins.list </p>
-<pre><code>sudo apt update
+<pre><code>sudo sh -c 'echo deb https://pkg.jenkins.io/debian-stable binary/ &gt; \ 
+/etc/apt/sources.list.d/jenkins.list
+
+sudo apt update
 </code></pre>
 <p><img alt="image" src="/last.png" /> </p>
 <p>Now install Jenkins and it’s dependencies: </p>
