--- a/site/setting-up-dvna/index.html
+++ b/site/setting-up-dvna/index.html
@@ -445,22 +445,23 @@
 </li>
 <li>
 <p>Use the following command to set up the stable repository:</p>
+<pre><code>echo \
+"deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+$(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list &gt; /dev/null
+</code></pre>
 </li>
-</ul>
-<p>echo \
-  "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
-  $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list &gt; /dev/null</p>
-<ul>
-<li>Update the apt package index, and install the latest version of Docker Engine and containerd, or go to the next step to install a specific version:</li>
-</ul>
-<p>sudo apt-get update
-  sudo apt-get install docker-ce docker-ce-cli containerd.io
-  sudo docker run hello-world # Test if docker installation is successful </p>
-<ul>
+<li>
+<p>Update the apt package index, and install the latest version of Docker Engine and containerd, or go to the next step to install a specific version:</p>
+<pre><code>sudo apt-get update
+sudo apt-get install docker-ce docker-ce-cli containerd.io
+sudo docker run hello-world # Test if docker installation is successful
+</code></pre>
+</li>
 <li>
 <p>Install NodeJS and NPM:</p>
-<p>sudo curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash - &amp;&amp;
-  sudo apt install -y nodejs </p>
+<pre><code>sudo curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash - &amp;&amp;
+sudo apt install -y nodejs
+</code></pre>
 </li>
 </ul>
 <h2 id="setup-dvna">Setup DVNA</h2>
