--- a/site/contents/index.html
+++ b/site/contents/index.html
@@ -408,6 +408,7 @@
 <li><a href="#Source-Code-Quality-Analysis">Source-Code-Quality-Analysis</a></li>
 <li><a href="#SCA">SCA</a></li>
 <li><a href="#SAST">SAST</a></li>
+<li><a href="#Working-of-pipeline">Working-of-pipeline</a></li>
 </ul>
                 
               
