--- a/site/Working-of-pipeline/index.html
+++ b/site/Working-of-pipeline/index.html
@@ -535,46 +535,47 @@
 <pre><code>pipeline {
     agent any
 
-        stages {
-            stage ('Initialization') {
-                steps {
-                    sh 'echo "Starting the build!"'
-                }
+    stages {
+        stage ('Initialization') {
+            steps {
+                sh 'echo "Starting the build!"'
             }
+        }
 
-            stage ('Build') {
-                environment {
-                    MYSQL_USER="dvna"
-                    MYSQL_DATABASE="dvna"
-                    MYSQL_PASSWORD=&lt;password&gt;
-                    MYSQL_RANDOM_ROOT_PASSWORD=&lt;yes or no&gt;
-                    MYSQL_HOST="mysql-db"
-                    MYSQL_PORT=3306
-                }
-                steps {
-                    sh 'echo "MYSQL_USER=$MYSQL_USER\nMYSQL_DATABASE=$MYSQL_DATABASE\nMYSQL_PASSWORD=$MYSQL_PASSWORD\nMYSQL_RANDOM_ROOT_PASSWORD=$MYSQL_RANDOM_ROOT_PASSWORD\nMYSQL_HOST=$MYSQL_HOST\nMYSQL_PORT=$MYSQL_PORT" &gt; ~/vars.env'
-                    sh 'docker run --rm -d --name dvna-mysql --env-file ~/vars.env mysql:5.7 tail -f /dev/null'
-                    sh 'docker run --rm -d --name dvna-app --env-file ~/vars.env --link dvna-mysql:mysql-db -p 9090:9090 appsecco/dvna'
-                    sh 'docker cp dvna-app:/app/ ~/'        
-                }
+        stage ('Build') {
+            environment {
+                MYSQL_USER="dvna"
+                MYSQL_DATABASE="dvna"
+                MYSQL_PASSWORD="Prlokhande_5398"
+                MYSQL_RANDOM_ROOT_PASSWORD="yes"
+                MYSQL_HOST="mysql-db"
+                MYSQL_PORT=3306
             }
-
-            stage ('Remove DVNA from Jenkins') {
-                steps {
-                    sh 'rm -rf ~/app'
-                    sh 'docker stop dvna-app &amp;&amp; docker stop dvna-mysql'
-                    sh 'docker rmi appsecco/dvna'
-                }
+            steps {
+                sh 'echo "MYSQL_USER=$MYSQL_USER\nMYSQL_DATABASE=$MYSQL_DATABASE\nMYSQL_PASSWORD=$MYSQL_PASSWORD\nMYSQL_RANDOM_ROOT_PASSWORD=$MYSQL_RANDOM_ROOT_PASSWORD\nMYSQL_HOST=$MYSQL_HOST\nMYSQL_PORT=$MYSQL_PORT" &gt; ~/vars.env'
+                sh 'docker run --rm -d --name dvna-mysql --env-file ~/vars.env mysql:5.7 tail -f /dev/null'
+                sh 'docker run --rm -d --name dvna-app --env-file ~/vars.env --link dvna-mysql:mysql-db -p 9090:9090 appsecco/dvna'
+                sh 'docker cp dvna-app:/app/ ~/'        
             }
+        }
 
-            stage ('Deploy to DVNA') {
-                steps {
-                    sh 'ssh -tt -o StrictHostKeyChecking=no prod-vm@192.168.1.55 "docker stop dvna-app &amp;&amp; docker stop dvna-mysql &amp;&amp; docker rm dvna-app &amp;&amp; docker rm dvna-mysql &amp;&amp; docker rmi appsecco/dvna || true"'
-                    sh 'scp ~/vars.env prod-vm@192.168.1.55:~/'
-                    sh 'ssh -tt -o StrictHostKeyChecking=no prod-vm@192.168.1.55 "docker run -d --name dvna-mysql --env-file ~/vars.env mysql:5.7 tail -f /dev/null"'
-                    sh 'ssh -tt -o StrictHostKeyChecking=no prod-vm@192.168.1.55 "docker run -d --name dvna-app --env-file ~/vars.env --link dvna-mysql:mysql-db -p 9090:9090 appsecco/dvna"'
-                }
-        }   }
+        stage ('Remove DVNA from Jenkins') {
+            steps {
+                sh 'rm -rf ~/app'
+                sh 'docker stop dvna-app &amp;&amp; docker stop dvna-mysql'
+                sh 'docker rmi appsecco/dvna'
+            }
+        }
+
+        stage ('Deploy DVNA to Production') {
+            steps {
+                sh 'ssh -tt -o StrictHostKeyChecking=no prod-vm@192.168.1.55 "docker stop dvna-app &amp;&amp; docker stop dvna-mysql &amp;&amp; docker rm dvna-app &amp;&amp; docker rm dvna-mysql &amp;&amp; docker rmi appsecco/dvna || true"'
+                sh 'scp ~/vars.env prod-vm@192.168.1.55:~/'
+                sh 'ssh -tt -o StrictHostKeyChecking=no prod-vm@192.168.1.55 "docker run -d --name dvna-mysql --env-file ~/vars.env mysql:5.7 tail -f /dev/null"'
+                sh 'ssh -tt -o StrictHostKeyChecking=no prod-vm@192.168.1.55 "docker run -d --name dvna-app --env-file ~/vars.env --link dvna-mysql:mysql-db -p 9090:9090 appsecco/dvna"'
+            }
+        }
+
     }
 }
 </code></pre>
