--- a/site/setting-up-maven-pipeline/index.html
+++ b/site/setting-up-maven-pipeline/index.html
@@ -463,6 +463,7 @@
 <ul>
 <li>Click on the Manage Jenkins as shown below.</li>
 </ul>
+<p><img alt="image" src="/pictures/1.png" /></p>
 <p><img alt="image" src="/pictures/new_1.png" /></p>
 <ul>
 <li>Under the System Configuration section, click on the Manage Plugins options.</li>
