--- a/site/SAST/index.html
+++ b/site/SAST/index.html
@@ -496,6 +496,7 @@
                 <h1 id="static-application-security-testingsast">Static Application Security Testing(SAST)</h1>
 <p>SAST is a testing methodology that analyses source code, byte code and binaries for bugs and design errors to find <a href="https://www.synopsys.com/blogs/software-security/types-of-security-vulnerabilities/">security vulnerabilities</a>, before the application is compiled. </p>
 <p>SAST does not require a working application and can take place without code being executed. It helps developers identify vulnerabilities in the initial stages of development and quickly resolve issues without breaking builds or passing on vulnerabilities to the final release of the application.</p>
+<p><img alt="image" src="/pictures/1.png" /></p>
 <h2 id="sast-tools-for-nodejs-applications">SAST Tools for Node.js Applications</h2>
 <p>As given the name Damn Vulnerable Nodejs Application, it is quite obvious to figure the tech stack used, Nodejs is the server-side language used along with a SQL database.  </p>
 <p>The following are the tools used to perform static analysis on Nodejs applications with steps to install and configure them with Jenkins.</p>
