--- a/site/setting-up-pipeline/index.html
+++ b/site/setting-up-pipeline/index.html
@@ -704,6 +704,15 @@ A JenkinsFile stores the entire CI/CD process as code on the local machine. As s
     }
 }
 </code></pre>
+<ul>
+<li><code>pipeline</code> - Constitutes the entire definition of the pipeline.</li>
+<li><code>agent</code> - Is used to choose the way the Jenkins instance(s) are used to run the pipeline. The <code>any</code> keyword defines that Jenkins should - allocate any available agent (an instance of Jenkins/a slave/the master instance) to execute the pipeline.</li>
+<li><code>stages</code> - Consists of all the stages/jobs to be performed during the execution of the pipeline.</li>
+<li><code>stage</code> - Specify the task to be performed.</li>
+<li><code>steps</code> - This block defines actions to be performed within a particular stage.</li>
+<li><code>sh</code> - Used to execute shell commands through Jenkins.</li>
+<li></li>
+</ul>
 <h2 id="ssh-access-configuration">SSH Access Configuration</h2>
 <ul>
 <li>Secure Shell Protocol (SSH) provides a secure channel over an unsecured network by using a client–server architecture, connecting an SSH client application with an SSH server. The standard TCP port for SSH is 22.</li>
