--- a/site/Resources/index.html
+++ b/site/Resources/index.html
@@ -445,8 +445,12 @@
                 <h1 id="resources">Resources</h1>
 <p>These are some references I used along with the ones mentioned implicitly in the report:</p>
 <ul>
-<li>Ubuntu (https://www.digitalocean.com/community/tutorials/initial-server-setup-with-ubuntu-18-04)</li>
-<li>OpenJDK (https://www.digitalocean.com/community/tutorials/how-to-install-java-with-apt-on-ubuntu-18-04#installing-specific-versions-of-openjdk)</li>
+<li>
+<p>Ubuntu: https://www.digitalocean.com/community/tutorials/initial-server-setup-with-ubuntu-18-04</p>
+</li>
+<li>
+<p>OpenJDK (https://www.digitalocean.com/community/tutorials/how-to-install-java-with-apt-on-ubuntu-18-04#installing-specific-versions-of-openjdk)</p>
+</li>
 <li>MKDocs (https://www.mkdocs.org/user-guide/installation/)</li>
 <li>Apache Maven (https://maven.apache.org/)</li>
 <li>NodeJS (https://docs.docker.com/engine/install/)</li>
