--- a/site/Complete-pipeline/index.html
+++ b/site/Complete-pipeline/index.html
@@ -457,6 +457,8 @@
                 
                 
                 <h1 id="final-pipeline-structure">Final Pipeline Structure</h1>
+<p><strong><em> Objective</em></strong></p>
+<p>The aim of this section is to perform dynamic analysis using DAST tools on DVNA and solve the 6th point of the <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
 <h2 id="complete-pipeline">Complete Pipeline</h2>
 <p>Various stages of DVNA (SAST, DAST, Code Quality Analysis, SBoM, SCA) were tested individually, here we have combined all all the segments together. The following is the complete pipeline to perform multiple scans and then deploy it in production:</p>
 <pre><code>pipeline {
