--- a/site/Problem-statements/index.html
+++ b/site/Problem-statements/index.html
@@ -420,6 +420,7 @@
 <li>Perform dynamic analysis by using suitable DAST tools on DVNA and generate a report.</li>
 <li>Generate Software Bill of Materials of DVNA for all its dependencies.</li>
 <li>Perform Source Code Quality Analysis for linting errors to improve code quality and generate quality report.</li>
+<li>Create a complete pipeline structure combining all the segments together.</li>
 <li>Do extensive documentation in markdown and deploy it as a MkDocs website.</li>
 </ol>
                 
