--- a/site/SBoM/index.html
+++ b/site/SBoM/index.html
@@ -431,6 +431,8 @@
                 
                 
                 <h1 id="what-is-sbom">What is SBoM?</h1>
+<p><strong><em> Objective</em></strong></p>
+<p>The aim of this section is to perform dynamic analysis using DAST tools on DVNA and solve the 6th point of the <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
 <p>A software bill of materials is a list of all the open source and third-party components present in a codebase. A Bill of Materials is a list of components used to assemble/create a product. It gives out a specification about how each component was used in the making of the end product.</p>
 <h2 id="cyclonedx">CycloneDX</h2>
 <p>To generate the SBoM for DVNA, we are using a tool called CycloneDX. According to the <a href="https://github.com/CycloneDX/cyclonedx-node-module#cyclonedx-nodejs-module">documentation</a> CycloneDX is a module for Node.js creates a valid CycloneDX SBoM containing an aggregate of all project dependencies.</p>
