--- a/site/setting-up-VM/index.html
+++ b/site/setting-up-VM/index.html
@@ -653,6 +653,8 @@
                 
                 
                 <h1 id="what-is-virtual-machine">What is Virtual Machine?</h1>
+<p><strong><em>Objective</em></strong>
+The aim of this section is to understand the Jenkins pipeline to deploy DVNA and solve the <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
 <p>For understanding Virtual machine (VM) we will have to understand what Virtualization is. </p>
 <ul>
 <li>
