--- a/site/contents/index.html
+++ b/site/contents/index.html
@@ -445,18 +445,18 @@
                 <h1 id="table-of-contents">Table of contents</h1>
 <ul>
 <li><a href="https://devsecops-report.netlify.app/">Introduction</a></li>
-<li><a href="#Problem-statements">Problem Statements</a></li>
-<li><a href="#setting-up-VM">Setting up VMs</a></li>
-<li><a href="#setting-up-jenkins">Setting up jenkins</a></li>
-<li><a href="#setting-up-mkdocs">Setting up mkdocs</a></li>
-<li><a href="#setting-up-pipeline">Setting up pipeline</a></li>
-<li><a href="#setting-up-dvna">Setting up dvna</a></li>
-<li><a href="#SAST">Static Analysis</a></li>
-<li><a href="#Software-Composition-Analysis">Software Composition Analysis</a></li>
-<li><a href="#DAST">Dynamic Analysis</a></li>
-<li><a href="#software-composition-analysis">Source Code Quality Analysis</a></li>
-<li><a href="#Complete-pipeline">Complete Pipeline</a></li>
-<li><a href="#Resources">Resources</a></li>
+<li><a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statements</a></li>
+<li><a href="https://devsecops-report.netlify.app/setting-up-vm/">Setting up VMs</a></li>
+<li><a href="https://devsecops-report.netlify.app/setting-up-jenkins/">Setting up jenkins</a></li>
+<li><a href="https://devsecops-report.netlify.app/setting-up-mkdocs/">Setting up mkdocs</a></li>
+<li><a href="https://devsecops-report.netlify.app/setting-up-pipeline/">Setting up pipeline</a></li>
+<li><a href="https://devsecops-report.netlify.app/setting-up-dvna/">Setting up dvna</a></li>
+<li><a href="https://devsecops-report.netlify.app/sast/">Static Analysis</a></li>
+<li><a href="https://devsecops-report.netlify.app/software-composition-analysis/">Software Composition Analysis</a></li>
+<li><a href="https://devsecops-report.netlify.app/dast/">Dynamic Analysis</a></li>
+<li><a href="https://devsecops-report.netlify.app/source-code-quality-analysis/">Source Code Quality Analysis</a></li>
+<li><a href="https://devsecops-report.netlify.app/complete-pipeline/">Complete Pipeline</a></li>
+<li><a href="https://devsecops-report.netlify.app/resources/">Resources</a></li>
 </ul>
                 
               
