--- a/site/setting-up-VM/index.html
+++ b/site/setting-up-VM/index.html
@@ -680,7 +680,7 @@
                 
                 <h1 id="setting-up-vms">Setting up VMs</h1>
 <p><strong><em>Objective</em></strong></p>
-<p>The aim of this section is to understand the Jenkins pipeline to deploy DVNA and solve the 1st point of the <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
+<p>This section aims to set up the required infrastructure to perform the task and solve the 1st point of the <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
 <h2 id="what-is-virtual-machine">What is Virtual Machine?</h2>
 <p>For understanding Virtual machine (VM) we will have to understand what Virtualization is. </p>
 <ul>
