--- a/site/setting-up-pipeline/index.html
+++ b/site/setting-up-pipeline/index.html
@@ -593,8 +593,8 @@
                 
                 
                 <h1 id="jenkins-pipeline">Jenkins Pipeline</h1>
-<p><strong><em>Objective</em></strong>
-The aim of this section is to understand the Jenkins pipeline to deploy DVNA and solve the <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
+<p><strong><em>Objective</em></strong></p>
+<p>The aim of this section is to understand the Jenkins pipeline to deploy DVNA and solve the 4rth point of the <a href="https://devsecops-report.netlify.app/problem-statements/">Problem Statement</a>.</p>
 <h2 id="why-use-jenkins-pipeline">Why use Jenkins pipeline ?</h2>
 <p>Jenkins is an open continuous integration server which has the ability to support the automation of software development processes. You can create multiple automation jobs with the help of use cases, and run them as a Jenkins pipeline.</p>
 <p>Here are the reasons why you use should use Jenkins pipeline:</p>
