--- a/site/Problem-statements/index.html
+++ b/site/Problem-statements/index.html
@@ -414,6 +414,7 @@
 <li>Setup the infrastructure, required for the task, on two virtual machines running locally on a laptop. One VM contains the Jenkins and related infrastructure, and the second VM is for deploying DVNA using the pipeline.</li>
 <li>Setup the Jenkins server and to know about Jenkins pipeline.</li>
 <li>Setup the MKDocs and Netlify, connect it to github repository.</li>
+<li>Setup a Maven-Jenkins pipeline.</li>
 <li>Deploy the DVNA in the production server.</li>
 <li>Perform static analysis by using suitable SAST tools on DVNA and generate a report.</li>
 <li>Getting to know Software Composition Analysis.</li>
